Size fix for home logo on mobile screens

--- a/theme/mypd/scss/_core.scss
+++ b/theme/mypd/scss/_core.scss
@@ -961,7 +961,7 @@ footer #moodle-footer
 #mypd-home {
     display: inline-block;
     padding: .5em 0;
-    width: 19em;
+    width: 9em;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
